--- a/assets/analysis_report.Rmd
+++ b/assets/analysis_report.Rmd
@@ -60,6 +60,17 @@ joint_data = data_integrations %>%
   left_join(data_classified, by = "read_name")
 head(joint_data)
 ```
+
+# Filter data by non-Human classification
+
+```{r nonhuman, echo=FALSE}
+
+joint_data = joint_data %>%
+    filter(classtype != "U") %>%
+    filter(taxID != "9606")
+```
+
+
 # creazione seqInfo per la costruzione del plot
 
 ```{r seqInfo, include=FALSE}
