--- a/assets/analysis_report.Rmd
+++ b/assets/analysis_report.Rmd
@@ -14,6 +14,7 @@ editor_options:
   chunk_output_type: console
 params:
   sampleids: NULL
+  istest: NULL
 ---
 
 # creazione delle tibble per fare il join dei files classificati e dei siti di integrazione
@@ -29,6 +30,8 @@ sampleids <- unlist(strsplit(params$sampleids, ","))
 
 data_classified = tibble()
 data_integrations = tibble()
+
+eval_chunk = !istest
 
 for (sample in sampleids){
   files = dir(pattern = sample)
@@ -60,15 +63,15 @@ joint_data = data_integrations %>%
   left_join(data_classified, by = "read_name")
 head(joint_data)
 ```
-<!--
+
 # Filter data by non-Human classification
 
-```{r nonhuman, echo=FALSE}
+```{r nonhuman, echo=FALSE, eval=eval_chunk}
 
 joint_data = joint_data %>%
     filter(classtype != "U") %>%
     filter(taxID != "9606")
-``` -->
+```
 
 
 # creazione seqInfo per la costruzione del plot
