--- a/assets/analysis_report.Rmd
+++ b/assets/analysis_report.Rmd
@@ -32,8 +32,9 @@ sampleids <- unlist(strsplit(params$sampleids, ","))
 ## exceeds the lenght of a line in the terminal in use
 sampleids = str_replace_all(sampleids, "[\r\n]" , "")
 
-data_classified = tibble()
+data_classified_single = tibble()
 data_integrations = tibble()
+data_classified_both = tibble()
 
 eval_istest <- params$istest == "false"
 
@@ -45,25 +46,36 @@ if ( params$taxonomy_id == "9606" ) {
 
 for (sample in sampleids){
   files = dir(pattern = sample)
-  classified = files[grepl("classified", files)]
+  files_single = dir("classified_single", pattern = sample)
+  files_both = dir("classified_both", pattern = sample)
+  classified_single = files_single[grepl("classified", files)]
+  classified_both = files_both[grepl("classified", files)]
   integrations = files[grep("integration", files)]
-  tmp = read_tsv(classified, col_names = c("classtype", "read_name", "taxID", "length", "k-mers info"))
-  data_classified = rbind(
-    data_classified,
+  tmpsingle = read_tsv(classified_single, col_names = c("classtype", "read_name", "taxID", "length", "k-mers info"))
+  data_classified_single = rbind(
+    data_classified_single,
     cbind(
-      tmp,
+      tmpsingle,
       sample = sample
     )
   )
-  est = read_tsv(integrations, col_names = c("read_name", "chr", "position"))
+  intsingle = read_tsv(integrations, col_names = c("read_name", "chr", "position"))
   data_integrations = rbind(
     data_integrations,
     cbind(
-      est,
+      intsingle,
       sample = sample
     )
   )
-  rm(est,sample)
+  tmpboth = read_tsv(classified_both, col_names = c("classtype", "read_name", "taxID", "length", "k-mers info"))
+  data_classified_both = rbind(
+    data_classified_both,
+    cbind(
+      tmpboth,
+      sample = sample
+    )
+  )
+  rm(intsingle,sample)
 }
 ```
 # join delle due tibble
