--- a/assets/analysis_report.Rmd
+++ b/assets/analysis_report.Rmd
@@ -83,7 +83,7 @@ for (sample in sampleids){
 ```{r jointData, echo=FALSE}
 
 joint_data = data_integrations %>%
-  left_join(data_classified, by = "read_name")
+  left_join(data_classified_single, by = "read_name")
     head(joint_data)
 ```
 
